--- a/css/styles.css
+++ b/css/styles.css
@@ -446,7 +446,6 @@ td:first-child {
 
 td:first-child::after {
     content: '';
-    width: 50%;
     height: 1px;
     background-color: rgba(157, 164, 189, 0.12);
     flex-grow: 1;
@@ -486,7 +485,6 @@ td:last-child {
 }
 
 .why-list li {
-    position: relative;
     width: 170px;
     height: 133px;
     padding: 20px 24px;
@@ -499,6 +497,7 @@ td:last-child {
 }
 
 .number {
+    position: relative;
     margin-bottom: 6px;
     font-weight: 700;
     font-size: 42px;
@@ -506,12 +505,11 @@ td:last-child {
     letter-spacing: 0.05em;
 }
 
-.why-list li::before {
+.number::before {
     position: absolute;
-    top: 27px;
-    right: 39px;
+    top: 3px;
+    right: 9px;
     content: "+";
-    display: block;
     width: 13px;
     font-weight: 600;
     font-size: 16px;
@@ -781,4 +779,65 @@ color: var(--title-and-dark-button);
     width: 60px;
     height: 1px;
     background-color: currentColor;
+}
+
+/* ========== Modal Window ============ */
+
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 200;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(114, 122, 148, 0.4);
+    transition: transform 1000ms;
+}
+
+.backdrop.is-hidden {
+    visibility: hidden;
+    opacity: 0; 
+    pointer-events: none;
+    transform: rotate(-45deg) scale(1.5);
+}
+
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 600px;
+    height: 400px;
+    border-radius: 5px;
+    background-color: #fff;
+}
+
+.btn-cls {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 20px;
+    right: 20px;
+    width: 20px;
+    height: 20px;
+    border-radius: 4px;
+    background-color: rgba(114, 122, 148, 0.4);
+    cursor: pointer;
+    transition: color 500ms, border 500ms;
+}
+
+.btn-cls > svg {
+    transition: fill 500ms;
+}
+
+.btn-cls:hover > svg,
+.btn-cls:focus > svg {
+    fill: #FF6C00;
+}
+
+.btn-cls:hover,
+.btn-cls:focus {
+    background-color: #fff;
+    border: 1px solid #FF6C00;
 }
