--- a/css/styles.css
+++ b/css/styles.css
@@ -41,31 +41,244 @@ img {
     text-decoration: none;
 }
 
-/* ----------------- Контейнер ------------------ */
+/* General properties container */
 
-.container {
-    width: 1200px;
-    margin: 0 auto;
-    padding: 0 15px;
+@media screen and (min-width: 448px) {
+    .container {
+        width: 448px;
+        margin: 0 auto;
+        padding: 0 15px;
+        outline: 1px solid #FF6C00;
+    }    
 }
 
-/* ==========Хедер========== */
-
-/* area-label="" в батомі атрибут без нічого крім іконки 
-в спанах текст, если иконка сломана, с класом visually-hidden и спрятан через ссс*/
-
-.header-page {
-    position: absolute;
-    z-index: 100;
-    width: 100%;
-    padding-top: 32px;
+@media screen and (min-width: 768px) {
+    .container {
+        width: 720px;
+    }     
 }
+    
+@media screen and (min-width: 1200px) {
+    .container {
+        width: 1200px;
+    }
+}
+
+/* ========== HEADER ========== */
 
 .header-cntnr {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
+
+.logo-svg {
+    fill: var(--header-title-button-text-dark-section);
+}
+
+/* ++++++++++ Phone ++++++++++ */
+
+@media screen and (max-width: 767px) {
+    .menu,
+    .phone,
+    .header-btn {
+        display: none;
+    }
+
+    .header-cntnr {
+        background-color: #555555;
+    }
+
+    .menu-btn {
+        padding: 0;
+        border: none;
+        line-height: 0;
+        background-color: transparent;
+    }
+    
+    .mobile-menu {
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 100;
+        width: 100%;
+        height: 100%;
+        background-color: var(--dark-background-color);
+        opacity: 0;
+        visibility: hidden;
+        pointer-events: none;
+
+        transition: transform 250ms, opacity 250ms;
+    }
+    
+    .mobile-menu.is-open {
+        opacity: 1;
+        visibility: visible;
+        pointer-events: auto;
+        transform: translateX(0);
+    }
+
+    .mobile-menu-wrap {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        margin-left: auto;
+        padding: 118px 40px;
+        max-width: 337px;
+        height: 100%;
+        max-height: 796px;
+        background-color: var(--main-background-color);
+        overflow-y: auto;
+    }
+    
+    .mobile-btn-cls {
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        top: 48px;
+        right: 31px;
+        padding: 0;
+        border: none;
+        width: 40px;
+        height: 40px;
+        border-radius: 4px;
+        background-color: transparent;
+        cursor: pointer;
+        transition: color 500ms, border 500ms;
+    }
+
+    .mobile-btn-cls>svg {
+        transition: fill 500ms;
+    }
+
+    .mobile-btn-cls:hover>svg,
+    .mobile-btn-cls:focus>svg {
+        fill: #FF6C00;
+    }
+
+    .mobile-btn-cls:hover,
+    .mobile-btn-cls:focus {
+        background-color: #fff;
+        border: 1px solid #FF6C00;
+    }
+
+    .mobile-menu-list {
+        margin-bottom: 64px;
+    }
+
+    .mobile-menu-item:not(:last-child) {
+        margin-bottom: 24px;
+    }
+
+    .mobile-menu-list a,
+    .mobile-phone {
+        font-weight: 600;
+        font-size: 18px;
+        line-height: 1.39;
+        letter-spacing: 0.1em;
+        color: var(--title-and-dark-button);
+    }
+
+    .mobile-menu a {
+        transition: color 500ms;
+    }
+
+    .mobile-phone {
+        text-decoration: none;
+        margin-bottom: 24px;
+    }
+
+    .mobile-menu a:hover,
+    .mobile-menu a:focus {
+        color: var(--accent-color);
+    }
+     
+    .btn {
+        height: 40px;
+        border: 1px solid var(--accent-color);
+        border-radius: 25px;
+        font-family: inherit;
+        font-weight: 600;
+        font-size: 12px;
+        line-height: 1.33;
+        letter-spacing: 0.09em;
+        text-transform: uppercase;
+        cursor: pointer;
+
+        transition: 500ms;
+    }
+
+    .mobile-header-btn {
+        margin-bottom: 64px;
+        width: 194px;
+        color: var(--title-and-dark-button);
+        background-color: transparent;
+    }
+
+    .btn:hover,
+    .btn:focus {
+        background-color: var(--accent-color);
+        color: var(--grey-background-color);
+    }
+    
+    .mobile-net-menu {
+        margin-bottom: auto;
+    }
+
+    .mobile-net-item:first-child::before {
+        content: '';
+        display: inline-block;
+        width: 60px;
+        height: 1px;
+        background-color: var(--title-and-dark-button);
+    }
+
+    .mobile-net-item:first-child {
+        display: flex;
+        align-items: center;
+        gap: 40px;
+        margin-bottom: 24px;
+    }
+
+    .mobile-net-menu a {
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 1.36;
+        letter-spacing: 0.2em;
+        color: var(--title-and-dark-button);
+    }
+
+    .mobile-net-item:last-child {
+        margin-left: 100px;
+    }
+}
+
+
+/* ++++++++++ Tablet ++++++++++ */
+
+@media screen and (min-width: 768px) {
+    .menu-btn {
+        display: none;
+    }
+}
+/* ++++++++++ Desktop ++++++++++ */
+
+@media screen and (min-width: 1200px) {
+    .menu-btn {
+        display: none;
+        }
+}
+
+
+/* .header-page {
+    position: absolute;
+    z-index: 100;
+    width: 100%;
+    padding-top: 32px;
+}
+
+
 
 .menu-nav {
     margin-right: auto;
@@ -116,15 +329,14 @@ transition: color 500ms;
 .menu a:hover,
 .menu a:focus {
     color: var(--accent-color);
-}
+} */
 
 /* Кнопка */
 
-.btn {
+/* .btn {
     width: 160px;
     height: 40px;
-    /* padding: 11px 19px;
-    margin-right: 17px; */
+    
 
     border: 1px solid var(--accent-color);
     border-radius: 25px;
@@ -148,7 +360,7 @@ transition: color 500ms;
 .btn:hover,
 .btn:focus {
     background-color: var(--accent-color);
-}
+} */
 
 /* ======== HERO ========== */
 
@@ -158,7 +370,7 @@ transition: color 500ms;
      
 } */
 
-.hero-cntnr {
+/* .hero-cntnr {
     display: flex;
 }
 
@@ -336,11 +548,11 @@ transition: color 500ms;
 
 .bf-item:last-child {
     text-align: end;
-}
+} */
 
 /* ======= ABOUT ======== */
 
-.about {
+/* .about {
     padding-top: 120px;
     padding-bottom: 120px;
 }
@@ -392,11 +604,11 @@ transition: color 500ms;
 
 .about-btn {
     color: var(--title-and-dark-button);
-}
+} */
 
 /* ====== PRICES ======== */
 
-.prices {
+/* .prices {
     padding-top: 120px;
     padding-bottom: 120px;
     max-width: 1600px;
@@ -461,11 +673,11 @@ td:last-child {
     margin-right: auto;
     margin-left: auto;
     color: var(--header-title-button-text-dark-section);
-}
+} */
 
 /* ====== WHY WE ======= */
 
-.why {
+/* .why {
     padding-top: 120px;
     padding-bottom: 120px;
 }
@@ -535,11 +747,11 @@ padding-top: 9px;
 
 .why-sub {
     color: var(--text-light-sections);
-}
+} */
 
 /* ========= TEAM ======== */
 
-.team {
+/* .team {
     padding-top: 120px;
     padding-bottom: 120px;
     background-color: var(--grey-background-color);
@@ -611,11 +823,11 @@ padding-top: 9px;
 
 .team-net-link:is(:hover, :focus) .net-icon {
     fill: var(--accent-color);
-}
+} */
 
 /* ====== PORTFOLIO ====== */
 
-.portfolio {
+/* .portfolio {
     padding-top: 120px;
     padding-bottom: 120px;
 }
@@ -633,11 +845,11 @@ padding-top: 9px;
 
 .portf-list li {
     flex-basis: calc((100% - 4*30px) / 4);
-}
+} */
 
 /* =========== BOOKING & CONTACTS ============= */
 
-.booking-contacts {
+/* .booking-contacts {
     max-width: 1600px;
     margin: 0 auto;
     background-image: url(../images/address.png);
@@ -779,11 +991,11 @@ a.email {
     width: 60px;
     height: 1px;
     background-color: rgba(157, 164, 189, 0.4);
-}
+} */
 
 /* ============= FOOTER ============= */
 
-.footer {
+/* .footer {
     padding-top: 56px;
     padding-bottom: 56px;
     background-color: #F7F7F7;
@@ -836,11 +1048,11 @@ color: var(--title-and-dark-button);
     width: 60px;
     height: 1px;
     background-color: currentColor;
-}
+} */
 
 /* ========== Modal Window ============ */
 
-.backdrop {
+/* .backdrop {
     position: fixed;
     top: 0;
     left: 0;
@@ -937,4 +1149,4 @@ color: var(--title-and-dark-button);
     margin-left: auto;
     margin-right: auto;
         color: var(--title-and-dark-button);
-}
+} */
